# model-globally-match-locally-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  ppf.cc  ppf.py  requirements.txt  scene_larger.ply  scene_small.ply  test_ppf_fast.py
example_models/: model_small.ply
